--- a/chat/chat.html
+++ b/chat/chat.html
@@ -12,17 +12,17 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
-            <a class="navbar-brand" href="./index.html" style="color: azure;"><h1><b>iLegalBot</b></h1></a>
+            <a class="navbar-brand" href="./index.html" style="color: rgb(255, 255, 255);"><h1><b>iLegalBot</b></h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                  <li class="nav-item dropdown" style="font-size: 25px;">
+                  <li class="nav-item dropdown" style="font-size: 25px;color: rgb(255, 255, 255);">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Category
                     </a>
@@ -37,13 +37,13 @@
                       <a class="dropdown-item" href="#">Criminal Lawyer</a>
                     </div>
                   </li>
-                  <li class="nav-item active" style="font-size: 25px;">
+                  <li class="nav-item active" style="font-size: 25px;color: rgb(255, 255, 255);">
                     <a class="nav-link" href="#">Chats<span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item" style="font-size: 25px;">
+                  <li class="nav-item" style="font-size: 25px;color: rgb(255, 255, 255);">
                     <a class="nav-link" href="#">Free Advice</a>
                   </li>
-                  <li class="nav-item" style="font-size: 25px;">
+                  <li class="nav-item" style="font-size: 25px;color: rgb(255, 255, 255);">
                     <a class="nav-link" href="#">Notifications</a>
                   </li>
                 </ul>
