--- a/what lawyer will see/index.html
+++ b/what lawyer will see/index.html
@@ -11,8 +11,8 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"  crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
-    <body style="background-color: rgb(166, 170, 169);">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+    <body background="./backgr.jpg">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -23,22 +23,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto" >
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(61, 78, 94);">Bio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(197, 203, 209);">Bio <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(61, 78, 94);">Notification <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(194, 196, 199);">Notification <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color:rgb(61, 78, 94);">Chat<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color:rgb(185, 190, 196);">Chat<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color:rgb(61, 78, 94)">Free Advice<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color:rgb(188, 196, 202)">Free Advice<span class="sr-only">(current)</span></a>
                   </li>
                 </ul>
             </div>
         </nav>
         <br>
-        <h1 style="font-size: 50px;font-weight: bold;text-align: center;color: rgb(7, 80, 61)">DASHBOARD</h1>
+        <h1 style="font-size: 50px;font-weight: bold;text-align: center;color: rgb(248, 248, 248)">DASHBOARD</h1>
         <div class="container">
             <div class="my-5 p-3 bg-white rounded shadow-sm" style="opacity: .8;">
                 <h6 class="border-bottom border-gray pd-2 mb-0">Recent updates</h6>
