--- a/what user will see/index.html
+++ b/what user will see/index.html
@@ -12,7 +12,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -22,7 +22,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                  <li class="nav-item dropdown" style="font-size: 25px;">
+                  <li class="nav-item dropdown" style="font-size: 25px;color: azure;">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Category
                     </a>
@@ -37,13 +37,13 @@
                       <a class="dropdown-item" href="#">Criminal Lawyer</a>
                     </div>
                   </li>
-                  <li class="nav-item active" style="font-size: 25px;">
+                  <li class="nav-item active" style="font-size: 25px;color: rgb(225, 226, 226);">
                     <a class="nav-link" href="#">Chats<span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item" style="font-size: 25px;">
+                  <li class="nav-item" style="font-size: 25px;color: azure;">
                     <a class="nav-link" href="#">Free Advice</a>
                   </li>
-                  <li class="nav-item" style="font-size: 25px;">
+                  <li class="nav-item" style="font-size: 25px;color: azure;">
                     <a class="nav-link" href="#">Notifications</a>
                   </li>
                 </ul>
@@ -52,7 +52,7 @@
         <br>
         <div class="container" >
             <div class="row justify-content-around">
-                <div class="col-4" style="opacity: .7;">
+                <div class="col-4" style="opacity: .8;">
 
                     <div class="card">
                         <h5 class="card-header">Featured</h5>
@@ -63,8 +63,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-4" style="opacity: .7;">
-                    <div class="card" style="width: 25rem;">
+                <div class="col-4" style="opacity: .8;">
+                    <div class="card" style="width: 30rem;">
                         <img src="thischat.jpg" class="card-img-top" alt="CHAT">
                         <div class="card-body">
                           <h5 class="card-title">Personal Chat</h5>
