--- a/second/index.html
+++ b/second/index.html
@@ -12,7 +12,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -20,6 +20,16 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto" >
+                <li class="nav-item active">
+                  <a class="nav-link" href="#" style="font-size: 25px;color: rgb(236, 240, 243);">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#" style="font-size: 25px;color: rgb(235, 240, 245);">About<span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
+          </div>
         </nav>
         <br>
         &nbsp;&nbsp;<a href="#" class="btn btn-warning">Admin</a>
