--- a/sign  in/lawyer.html
+++ b/sign  in/lawyer.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Lawyersignin</title>
-        
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"  crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -22,12 +22,12 @@
             </button>
         </nav>
         <br>
-        <h1 style="font-size: 50px;text-align: center;">Sign In </h1>
+        <h1 style="font-size: 50px;text-align: center;color: azure;">Sign In </h1>
         <h5 style="text-align: center;">as lawyer</h5>
         <div class="container">
             <div class="row justify-content-around">
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem;opacity: .8;" >
                         <div class="card-header">
                           <h1 style="font-weight: bold;">Terms an Conditions</h1>
                         </div>
@@ -40,7 +40,7 @@
                       </div>
                 </div>
                 <div class="col-6">
-        <div class="card">
+        <div class="card" style="opacity: .9;">
             <div class="card-body">
                 <form>
                     <div class="form-row">
