--- a/sign  in/user.html
+++ b/sign  in/user.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Usersignin</title>
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"  crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light"  style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -26,7 +27,7 @@
         <div class="container">
             <div class="row justify-content-around">
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem;opacity: .8;">
                         <div class="card-header">
                           <h1 style="font-weight: bold;">Terms an Conditions</h1>
                         </div>
@@ -39,8 +40,8 @@
                       </div>
                 </div>
                 <div class="col-6">
-        <div class="card">
-            <div class="card-body">
+        <div class="card" style="opacity: .9;">
+            <div class="card-body" >
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-5">
