--- a/what admin will see/index.html
+++ b/what admin will see/index.html
@@ -12,7 +12,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
     </head>
     <body >
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(19, 158, 128);">
+        <nav class="navbar navbar-expand-lg navbar-light" >
             <a class="navbar-brand" href="#">
                 <img src="maisn.jpg" width="80" height="80" alt="">
             </a>
@@ -23,17 +23,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto" >
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(61, 78, 94);">Lawyer List <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(213, 215, 218);">Lawyer List <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(61, 78, 94);">UserList<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" style="font-size: 25px;color: rgb(228, 232, 235);">UserList<span class="sr-only">(current)</span></a>
                   </li>
                 </ul>
             </div>
         </nav>
         <br>
         <div class="container">
-           <div class="col-6" style="border: 2px solid black;opacity: .8;;border-radius:10px;width: 500px;background-color: rgb(104, 150, 115);">
+           <div class="col-6" style="border: 2px solid black;opacity: .8;;border-radius:10px;width: 500px;background-color: rgb(253, 253, 253);">
                <h1 style="font-weight: bold;">Lawyers list</h1>
                <div class="row">
                 <h4 > 1.Lorem ipsum began  .</h4> 
