--- a/sign up/lawyer.html
+++ b/sign up/lawyer.html
@@ -25,6 +25,10 @@
            <h1>Sign Up</h1>
            <form action="admin.html" method="POST" autocomplete="off">
                <div class="input-group">
+                   <label >Name</label>
+                   <input type="text" name="username" placeholder="Username">
+               </div>
+               <div class="input-group">
                    <label >Email</label>
                    <input type="email" name="email" placeholder="Email">
                </div>
